[package]
name = "gxr"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
indicatif = "0.17"
rust_xlsxwriter = "0.6"
encoding_rs = "0.8.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
